compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/functionAndProperty/classPropertyInConstructor.kt
// COMPARE_WITH_LIGHT_TREE

class C(<!CONFLICTING_JVM_DECLARATIONS!>val x: Int<!>) {
    <!CONFLICTING_JVM_DECLARATIONS!>fun getX()<!> = 1
}
